test/types/string/bradc/string2ints/badstring2int64.good
badstring2int64.chpl:3: error: Unexpected character when converting from string to int(64): 'e'
